# UniFECAF-Projects

./: README.md
4-Semestre/Java/Project-Geometria/: README.md
4-Semestre/Java/ProjectBank/: settings.gradle
4-Semestre/Java/ProjectBank/app/: build.gradle
4-Semestre/Python/UniFECAF-API/: README.md  main.py  pyproject.toml  requirements.txt
4-Semestre/Python/UniFECAF-API/unifecaf_api/: __init__.py  openapi.py  storage.py
4-Semestre/Python/UniFECAF-API/unifecaf_api/app/: __init__.py  storage.py
4-Semestre/Python/UniFECAF-API/unifecaf_api/resources/: characters.py  frontend.py
4-Semestre/Python/UniFECAF-API/unifecaf_api/static/css/: characters.css
4-Semestre/Python/UniFECAF-API/unifecaf_api/templates/: characters.html
4-Semestre/Python/ecommerce/: pyproject.toml
4-Semestre/Python/heroverse/: seed.json
4-Semestre/Python/heroverse/heroverse-app/: nuxt.config.ts  package.json
4-Semestre/Python/heroverse/heroverse-app/app/components/: AppTopbar.vue  PersonagemForm.vue
4-Semestre/Python/heroverse/heroverse-app/app/composables/: useApi.ts  useAuth.ts  usePersonagens.ts  useTipos.ts  (+1 more)
4-Semestre/Python/heroverse/heroverse-backend/: AGENTS.md  README.md  ROADMAP.md  create_db.sql  database.db  pyproject.toml
4-Semestre/Python/heroverse/heroverse-backend/app/: __init__.py  config.py  database.py  docs.py  models.py  schemas.py  seed.py
4-Semestre/Python/heroverse/heroverse-backend/app/routes/: personagens.py  tipos.py  universos.py  usuarios.py
4-Semestre/Rust/src/: main.rs
Project-Geometria/src/br/com/fecaf/: Geometria.java
src/br/com/fecaf/: Geometria.java
src/br/com/fecaf/controller/: Menu.java
src/br/com/fecaf/model/: Circulo.java  Retangulo.java
(+28 files in other folders)
