[project]
name = "unifecaf_api"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno-Gomes-QA",email = "bruno.gomes.qa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)"
]

[project.scripts]
server = "main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
